<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    

    <TextView
        android:id="@+id/Expression"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="end"
        android:scrollHorizontally="true"
        android:ellipsize="start"
        android:singleLine="true"
        android:textColor="@color/clearButton"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/Result"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="end"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Clear"
                style="@style/ClearButtonStyle"
                android:text="@string/clear" />

            <TextView
                android:id="@+id/Equal"
                style="@style/EqualButtonStyle"
                android:text="@string/equal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Seven"
                style="@style/NumbersButtonStyle"
                android:text="@string/_7" />

            <TextView
                android:id="@+id/Eight"
                style="@style/NumbersButtonStyle"
                android:text="@string/_8" />

            <TextView
                android:id="@+id/Nine"
                style="@style/NumbersButtonStyle"
                android:text="@string/_9" />

            <TextView
                android:id="@+id/Mul"
                style="@style/ActionsButtonStyle"
                android:text="@string/mull" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Four"
                style="@style/NumbersButtonStyle"
                android:text="@string/_4" />

            <TextView
                android:id="@+id/Five"
                style="@style/NumbersButtonStyle"
                android:text="@string/_5" />

            <TextView
                android:id="@+id/Six"
                style="@style/NumbersButtonStyle"
                android:text="@string/_6" />

            <TextView
                android:id="@+id/Minus"
                style="@style/ActionsButtonStyle"
                android:text="@string/minus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/One"
                style="@style/NumbersButtonStyle"
                android:text="@string/_1"/>

            <TextView
                android:id="@+id/Two"
                style="@style/NumbersButtonStyle"
                android:text="@string/_2"/>

            <TextView
                android:id="@+id/Three"
                style="@style/NumbersButtonStyle"
                android:text="@string/_3"/>

            <TextView
                android:id="@+id/Plus"
                style="@style/ActionsButtonStyle"
                android:text="@string/plus"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Dot"
                style="@style/NumbersButtonStyle"
                android:text="@string/dot"/>

            <TextView
                android:id="@+id/Zero"
                style="@style/NumbersButtonStyle"
                android:text="@string/_0"/>

            <TextView
                android:id="@+id/Back"
                style="@style/NumbersButtonStyle"
                android:text="@string/delete"/>

            <TextView
                android:id="@+id/Divide"
                style="@style/ActionsButtonStyle"
                android:text="@string/divide"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>